[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
load_file = "1.0.1"
mongodb = "2.8.2"
regex = "1.11.1"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = "1.38.2"
toml = "0.8.13"
zmq = "0.10.0"
