[package]
name = "api"
version = "1.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
load_file = "1.0.1"
mongodb = "3.3.0"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = "1.46.1"
toml = "0.8.23"
zmq = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.0.0"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["std"] }
